# opendb

./: Cargo.toml  README.md  migration.sql
src/: main.rs
src/routes/: basic.rs  database.rs  fallbacks.rs  mod.rs  user.rs
src/util/: detail.rs
