[package]
name = "buildingdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "uuid", "chrono" ] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
serde = "1.0.151"